methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:9: error: illegal start of statement (no modifiers allowed here)
  override def run() {
  ^